[package]
name = "pnet_derive"
version = "0.21.0"
authors = ["Robert Clipsham <robert@octarineparrot.com>", "Flier Lu <flier.lu@gmail.com>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/libpnet/libpnet"
repository = "https://github.com/libpnet/libpnet"
description = "Automatic bit manipulation for binary data formats"
readme = "../README.md"
keywords = ["networking", "bitfields", "packet", "protocol"]
categories = ["network-programming", "parsing"]

[lib]
name = "pnet_derive"
proc-macro = true

[dependencies]
failure = "0.1"
proc-macro2 = "0.4.2"
quote = "0.6"
syn = "0.14"
byteorder = "1.2"
itertools = "0.7"
regex = "1.0"

[dev-dependencies]
lazy_static = "1.1"
diff = "0.1"
colored = "1.6"
